# deep-research

./: .gitignore  test.json
agent/: .env.example  langgraph.json  pyproject.toml  test.ipynb
agent/src/: configuration.py  mocks.py  prompts.py  research_agent.py  state.py  workflow.py
