[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.10",
]
